Fix the DCHECK failure in render_text_harfbuzz.cc.

It's reported that DCHECK failed in AddLineSegment(). The reason might be
that it's not accurate to use std::numeric_limits<float>::epsilon() as the absolute
error margin to compare two floats since last_segment.x_range.end() and
segment.x_range.start() might be very large and epsilon() could end up being
smaller than the rounding error of std::abs(last_segment.x_range.end() - segment.x_range.start()).
Or there's likely floating math rounding errors somewhere that caused this DCHECK error.

We change the DCHECK to check the difference between one run and the next
is less than 1.0 (i.e., less than one pixel).

BUG=609004

Review-Url: https://codereview.chromium.org/1945283003
Cr-Commit-Position: refs/heads/master@{#391724}

Former-commit-id: e5a5bbfd2365c4c9f1f6cf97a56f0cd15b1c3132